--- a/my-weight-api/package.json
+++ b/my-weight-api/package.json
@@ -2,8 +2,9 @@
   "name": "my-weight-api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "app": "node dist/index.js"
   },
   "keywords": [],
   "author": "Marco Preciado",
