--- a/my-weight-api/package.json
+++ b/my-weight-api/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.11.0"
+    "inversify": "^6.0.2",
+    "inversify-express-utils": "^6.4.6",
+    "mysql2": "^3.11.0",
+    "reflect-metadata": "^0.2.2"
   }
 }
