--- a/my-weight-api/package.json
+++ b/my-weight-api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "app": "node dist/index.js"
+    "app": "node dist/index.js",
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "Marco Preciado",
@@ -15,7 +16,9 @@
     "@types/mysql": "^2.15.26",
     "@types/node": "^22.1.0",
     "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.16.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
