--- a/my-weight-api/package.json
+++ b/my-weight-api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "app": "node dist/index.js",
-    "start": "ts-node src/index.ts"
+    "start": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "Marco Preciado",
